kubernetes/app-deploysvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  selector:
    app: guessrapp-app
  ports:
  - protocol: TCP
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: guessrapp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guessrapp-app
  template:
    metadata:
      labels:
        app: guessrapp-app
    spec:
      restartPolicy: Always
      containers:
      - name: app
        image: us-west2-docker.pkg.dev/guessrapp/app/app:0.2
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 3
