kubernetes/redis-deploysvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: guessrapp-redis
  ports:
  - protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: guessrapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guessrapp-redis
  template:
    metadata:
      labels:
        app: guessrapp-redis
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
